--- a/_data/site_config.yml
+++ b/_data/site_config.yml
@@ -22,8 +22,8 @@ breadcrumbs:
 cookie_consent_form:
   enabled: false
 country:
-  name: Australia
-  adjective: Australian
+  name: Huelva
+  adjective: Onubenses
 create_goals:
   previous_next_links: false
   goal_content_heading: ''
@@ -142,8 +142,8 @@ indicator_tabs:
   tab_3: ''
   tab_4: ''
 languages:
-  - en
   - es
+  - en
 languages_public: []
 logos: []
 map_layers: []
